# gitpulse

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: config.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs  types.rs
src/export/: mod.rs
src/score/: mod.rs
src/ui/: app.rs  heatmap.rs  mod.rs  theme.rs  widgets.rs
tests/: score_tests.rs
