[package]
name = "gitpulse"
version = "0.1.0"
edition = "2021"
description = "Interactive TUI dashboard for GitHub profile analysis with Developer Health Score"
license = "MIT"
repository = "https://github.com/yourusername/gitpulse"
keywords = ["github", "tui", "cli", "dashboard", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gitpulse"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Config paths
dirs = "5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Misc
base64 = "0.22"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
